--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,18 @@
+/* Reset básico para remover margens e paddings padrões */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
 }
 header {
     background-color: gray;
@@ -10,39 +20,13 @@ header {
     padding: 10px 0;
     text-align: center;
 }
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-}
-.entity {
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-}
-.entity h2 {
-    text-align: center;
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-table, th, td {
-    border: 1px solid #ccc;
-}
-th, td {
-    padding: 8px;
-    text-align: left;
-}
-th {
-    background-color: #f2f2f2;
-}
+
 nav {
+    display: flex;
+    justify-content: center;
+    background: #444;
+    padding: 10px 0;
     width: 100%;
-    background-color: #333;
     overflow: hidden;
 }
 nav a {
@@ -60,6 +44,62 @@ nav a:hover {
 .hidden {
     display: none;
 }
+.entity h2 {
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    margin-bottom: 5px;
+}
+
+form input {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+form button {
+    padding: 10px;
+    background: grey;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+form button:hover {
+    background: #555;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+table th, table td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+table th {
+    background: darkgray;
+    color: #fff;
+}
+
+table tr:nth-child(even) {
+    background: #f9f9f9;
+}
+
 
 footer {
     background-color: gray; 
@@ -76,6 +116,14 @@ footer p {
 }
 
 /* Estilo para a modal */
+.section-group {
+    padding: 20px;
+    background: #fff;
+    margin: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
 .section-group-modal {
     display: none;
     position: fixed;
@@ -89,6 +137,7 @@ footer p {
     background-color: rgba(0,0,0,0.4);
     padding-top: 60px;
 }
+
 .modal-content {
     background-color: #fefefe;
     margin: 5% auto;
@@ -107,4 +156,41 @@ footer p {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Estilos específicos para os botões da modal */
+.btn-editar {
+    background: #3498db; 
+    color: #fff;
+    padding: 15px; 
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px; 
+}
+
+.btn-editar:hover {
+    background: #2980b9;
+}
+
+.btn-excluir {
+    background: #f44336; 
+    color: #fff;
+    padding: 15px; 
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn-excluir:hover {
+    background: #da190b;
+}
+
+/* Estilos para as seções: de pesquisa por ID e adicionar peça, estoque */
+#form-estoque-add, #form-peca-add, #form-peca-list form {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
 }
