--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -187,7 +187,7 @@ footer p {
 }
 
 /* Estilos para as seções: de pesquisa por ID e adicionar peça, estoque */
-#form-estoque-add, #form-peca-add, #form-peca-list form {
+#form-veiculo-add, #form-veiculo-list form, #form-estoque-add, #form-estoque-list form, #form-peca-add, #form-peca-list form {
     border: 1px solid #ccc;
     padding: 10px;
     margin-top: 15px;
